# Monas

./: CMakeLists.txt  LICENCE.txt  LICENSE.txt  Newbies installations and instructions  README  README.md  astyleOptions.txt  kouretesCode.Doxyfile  qiproject.xml
GUITools/KMonitor/: CMakeLists.txt  CommandsController.cpp  CommandsController.h  GWRemoteHosts.cpp  GWRemoteHosts.h  GlobalWorldController.cpp  GlobalWorldController.h  GraphicalRobotElement.cpp  GraphicalRobotElement.h  HostsComboBox.cpp  HostsComboBox.h  KCCHandler.cpp  KCCHandler.h  KCamView.cpp  KCamView.h  KCamView.ui  KFieldScene.cpp  KFieldScene.h  KGUIMessenger.cpp  KGUIMessenger.h  KGraphicsView.cpp  KGraphicsView.h  KLabel.cpp  KLabel.h  KMapScene.cpp  KMapScene.h  KMapView.cpp  KMapView.h  KMonitor.cpp  KMonitor.h  KMonitor.ui  KMonitorResources.qrc  KRobotMap.cpp  KRobotMap.h  KRobotView.cpp  KRobotView.h  KSonarsController.cpp  KSonarsController.h  KSonarsController.ui  KccHandler.cpp  (+30 more)
GUITools/KRobotView/: .project  CMakeLists.txt  KRobotView.cpp  Kimage.pb.cc  Kimage.pb.h  Kimage.proto  README
KArch/: CMakeLists.txt
KArch/config/: agents.xml  config.h  modules.xml
KArch/doc/: cmake.html
KArch/src/: CMakeLists.txt
KArch/src/architecture/: .blackboard.h.swp  agent.h  blackboard.h  policies.h  proxy.h  representation.h  talws.h
KArch/src/hal/: CMakeLists.txt  dlib_fnc.h  syscall.h  threadconfig.h
KArch/src/provAndRep/: CMakeLists.txt  provTemplate.cmake  providerRegistry.h
KArch/src/testing/: testXML.cpp  testXMLConfig.cpp
KArch/src/tools/: XMLConfig.h  stopWatch.h
src/: CMakeLists.txt
src/GUITools/: CMakeLists.txt
src/GUITools/KLocView/: CMakeLists.txt  KfieldGui.cpp  Kutils.h  README
src/GUITools/KMonitor/: CMakeLists.txt  CMakeLists_13.txt  CommandsController.cpp  CommandsController.h  CommandsController.ui  GlobalWorldController.cpp  GlobalWorldController.h  GlobalWorldController.ui  GraphicalRobotElement.cpp  GraphicalRobotElement.h  HostsComboBox.cpp  HostsComboBox.h  KCamView.cpp  KFieldScene.cpp  KFieldScene.h  KGUIMessenger.cpp  KGUIMessenger.h  KMapScene.cpp  KMapScene.h  KMonitor.cpp  KMonitor.h  KMonitor.ui  KSonarsController.cpp  KSonarsController.h  KccCameraSettings.cpp  KccCameraSettings.h  KccCameraSettings.ui  KccHandler.cpp  KccHandler.h  KccHandler.ui  KccLabel.cpp  KccLabel.h  LocalWorldController.cpp  LocalWorldController.h  LocalWorldController.ui  ReadMe.txt  SensorsController.cpp  SensorsController.h  SensorsController.ui  XMLHandler.cpp  (+2 more)
src/activities/: .gitignore  BehaviorConst.h  CMakeLists.txt  activTemplate.cmake  activityRegistry.h
src/activities/ApproachBall/: ApproachBall.cpp  ApproachBall.h  CMakeLists.txt
src/activities/AproachBall/: AproachBall.cpp
src/activities/AproachBallFor/: AproachBallFor.h  CMakeLists.txt
src/activities/AttackerPenalty/: AttackerPenalty.cpp  AttackerPenalty.h  CMakeLists.txt
src/activities/Behavior/: Behavior.cpp  Behavior.cpp.orig  Behavior.h  CMakeLists.txt  FormationGenerator.cpp  FormationGenerator.h  FormationParameters.h  PSO.h  Utility.h
src/activities/BehaviorGoalie/: BehaviorGoalie.cpp  BehaviorGoalie.h  CMakeLists.txt
src/activities/BehaviorPassing/: BehaviorPassing.cpp  BehaviorPassing.h  CMakeLists.txt
src/activities/BehaviorX/: BehaviorX.cpp  BehaviorX.h  CMakeLists.txt
src/activities/BodyBehavior/: BodyBehavior.cpp  BodyBehavior.h  CMakeLists.txt
src/activities/ChangeRobotPosition/: CMakeLists.txt  ChangeRobotPosition.cpp  ChangeRobotPosition.h
src/activities/FollowTheBall/: CMakeLists.txt  FollowTheBall.cpp  FollowTheBall.h
src/activities/GoToPosition/: CMakeLists.txt  GoToPosition.cpp  GoToPosition.h
src/activities/GoalkeeperScan/: CMakeLists.txt  GoalkeeperScan.cpp  GoalkeeperScan.h
src/activities/HeadAnglePublisher/: CMakeLists.txt  HeadAnglePublisher.cpp  HeadAnglePublisher.h
src/activities/Init/: Init.cpp  Init.h
src/architecture/: CMakeLists.txt  IActivity.cpp  IActivity.h  IExecutable.h  IProvider.cpp  IProvider.h  agent.h  agentConfig.h  archConfig.h  config.h  genFactory.h  genRegistrar.h  periodicthread.h  provider.h  statechartWrapper.cpp  statechartWrapper.h  talws.cpp  talws.h
src/core/: CMakeLists.txt
src/hal/: CMakeLists.txt  CondVar.hpp  Mutex.hpp  SystemClock.hpp  SystemCondVar.hpp  SystemMutex.hpp  SystemThread.hpp  SystemThreadPool.hpp  Thread.hpp  condvar.h  dlib_fnc.h  mutex.h  smart_timer.h  syscall.h  thread.h  threadPool.h  threadable.h
src/messages/: AllMessagesHeader.h  BToHeadMessage.pb.cc  BToHeadMessage.pb.h  BToHeadMessage.proto  Basic.proto  BehaviorMessages.pb.cc  BehaviorMessages.pb.h  BehaviorMessages.proto  BehaviorMessages.proto~  CMakeLists.txt  Debug.pb.cc  Debug.pb.h  Debug.proto  ExternalCommunication.pb.cc  ExternalCommunication.pb.h  ExternalCommunication.proto  GUICommunication.pb.cc  GUICommunication.pb.h  GUICommunication.proto  Gamecontroller.pb.cc  Gamecontroller.pb.h  Gamecontroller.proto  HeadBehaviorMessage.pb.cc  HeadBehaviorMessage.pb.h  HeadBehaviorMessage.proto  HeadToBMessage.pb.cc  HeadToBMessage.pb.h  HeadToBMessage.proto  Kimage.pb.cc  Kimage.pb.h  Kimage.proto  Motion.pb.cc  Motion.pb.h  Motion.proto  Network.pb.cc  Network.pb.h  Network.proto  ObstacleAvoidanceMessage.pb.cc  ObstacleAvoidanceMessage.pb.h  ObstacleAvoidanceMessage.proto  (+28 more)
src/provAndRep/: CMakeLists.txt  provTemplate.cmake
src/providers/: .gitignore  CMakeLists.providersample.txt  CMakeLists.txt  provTemplate.cmake
src/robocup/: CMakeLists.txt  CooperationHelper.cpp  CooperationHelper.hpp
src/statecharts/: CMakeLists.txt
src/testing/: CMakeLists.txt  KMat-inversionTesting.cpp  KMat-testing.cpp  Makefile  Optim-testing.cpp  Quaternion-testing.cpp  kalmantest.cpp  statechartTest.cpp  testThread.cpp  testXML.cpp  testXMLConfig.cpp
src/tools/: BehaviorConst.h  ForwardKinematics.h  KMat.h  MathFunctions.h  XML.h  XMLConfig.h  agentTiming.h  errorPolicies.h  genFactory.h  genRegistrar.h  importraw.m  logger.h  mathcommon.h  obstacleConst.h  profiler.hpp  singleton.h  smart_timer.hpp  statMovingAverage.h  stopWatch.h  toString.h  type2Type.h
(+1971 files in other folders)
